# fastapi-template

./: pyproject.toml
nginx/: Dockerfile
